key, queries, value layer added for a block of tokens.

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -5770,12 +5770,12 @@
         "query_layer = nn.Dense(token_info_size, use_bias=False)"
       ],
       "metadata": {
-        "id": "FHOVay-Y2Mss",
-        "outputId": "3c8cee78-49d8-45a8-e952-fc15b0e823df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "FHOVay-Y2Mss",
+        "outputId": "3c8cee78-49d8-45a8-e952-fc15b0e823df"
       },
       "execution_count": 272,
       "outputs": [
@@ -5861,12 +5861,12 @@
         "x"
       ],
       "metadata": {
-        "id": "yFKElCQe3kvE",
-        "outputId": "fe9e2d33-9dbf-4179-977f-3594e27f09da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "id": "yFKElCQe3kvE",
+        "outputId": "fe9e2d33-9dbf-4179-977f-3594e27f09da"
       },
       "execution_count": 275,
       "outputs": [
@@ -5960,12 +5960,12 @@
         "key, split_key = jrand.split(prng)"
       ],
       "metadata": {
-        "id": "4uGkOUsJ4df3",
-        "outputId": "90f9f5a5-52a9-43e0-84d3-b8e670bec58d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "4uGkOUsJ4df3",
+        "outputId": "90f9f5a5-52a9-43e0-84d3-b8e670bec58d"
       },
       "execution_count": 279,
       "outputs": [
@@ -6054,12 +6054,12 @@
         "keys.shape, queries.shape # each are (T, 16)"
       ],
       "metadata": {
-        "id": "5Ku4_M434A7P",
-        "outputId": "6f846c86-f0c4-4d15-81f2-cf141fcb78e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "5Ku4_M434A7P",
+        "outputId": "6f846c86-f0c4-4d15-81f2-cf141fcb78e6"
       },
       "execution_count": 283,
       "outputs": [
@@ -6151,12 +6151,12 @@
         "wei"
       ],
       "metadata": {
-        "id": "kafXGmJ948bX",
-        "outputId": "38ab18fb-9ad6-48b5-bbb7-d7c453b8fc04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "id": "kafXGmJ948bX",
+        "outputId": "38ab18fb-9ad6-48b5-bbb7-d7c453b8fc04"
       },
       "execution_count": 289,
       "outputs": [
@@ -6346,6 +6346,237 @@
           "execution_count": 290
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# each token also produces \"value\", which is what we would multiply with wei.\n",
+        "# so, wei is attention score.\n",
+        "# whenever the attention score is high, we want to take its value."
+      ],
+      "metadata": {
+        "id": "VCpDFskA6PFT",
+        "outputId": "865dd55d-7890-4032-81a4-273aff320fde",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 293,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Combing things from above and adding value layer as well."
+      ],
+      "metadata": {
+        "id": "XNYPY8vr6pQ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (tokens, channel info for each)\n",
+        "# (T, C)\n",
+        "\n",
+        "# for easy visualization, T=4, C=2\n",
+        "T=4; C=2\n",
+        "x = jrand.normal(jrand.PRNGKey(999), shape=(T, C))\n",
+        "\n",
+        "key, split_key = jrand.split(jrand.PRNGKey(9999))\n",
+        "\n",
+        "token_info_size = 16 # head_size\n",
+        "\n",
+        "key_layer = nn.Dense(token_info_size, use_bias=False)\n",
+        "query_layer = nn.Dense(token_info_size, use_bias=False)\n",
+        "value_layer = nn.Dense(token_info_size, use_bias=False)\n",
+        "\n",
+        "\n",
+        "keys = key_layer.apply(key_layer.init(split_key, x), x) # (T, token_info_size)\n",
+        "queries = query_layer.apply(query_layer.init(split_key, x), x)\n",
+        "values = value_layer.apply(value_layer.init(split_key, x), x) # (T, token_info_size)\n",
+        "\n",
+        "tril = jnp.tril(jnp.ones(shape=(T, T)))\n",
+        "\n",
+        "wei = jnp.dot(queries, keys.T) # (T, T)\n",
+        "wei = jnp.where(tril==0, -jnp.inf, wei)\n",
+        "wei = nn.softmax(wei, axis=-1)\n",
+        "\n",
+        "\n",
+        "out = jnp.dot(wei, values) # (T, T) * (T, token_info_size)\n",
+        "\n",
+        "# shape should be (T, token_info_size)\n",
+        "# i.e., (4, 16)\n",
+        "out.shape"
+      ],
+      "metadata": {
+        "id": "_3j_56B_6tms",
+        "outputId": "419ba43d-9fb8-4fcf-b467-dbdbed42b9c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "execution_count": 297,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 30px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 40px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    h1 { font-size: 60px; } /* Custom size for H1 */\n",
+              "    h2 { font-size: 24px; } /* Custom size for H2 */\n",
+              "    h3 { font-size: 18px; } /* Custom size for H3 */\n",
+              "    /* Add more as needed */\n",
+              "  </style>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 16)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 297
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## self-attention vs cross-attention: https://youtu.be/kCc8FmEb1nY?t=4542"
+      ],
+      "metadata": {
+        "id": "SdFA175m9cOy"
+      }
     },
     {
       "cell_type": "markdown",
