[vmap] jax.jitted `model_apply_batch` for multihead attention and it so much faster!

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -2735,7 +2735,10 @@
         "output, params = model.init_with_output(jrand.PRNGKey(99), sample_block_of_tokens)\n",
         "params = params[\"params\"]\n",
         "\n",
-        "model_apply_batch = jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0))\n",
+        "# model_apply_batch = jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0))\n",
+        "\n",
+        "# *** new ***: Fuck, jax.jit makes it so much faster even on GPU.\n",
+        "model_apply_batch = jax.jit(jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0)))\n",
         "\n",
         "def forward_pass(params, state, batch):\n",
         "  inputs, targets = batch\n",
@@ -2760,24 +2763,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3i62quMPv4d",
-        "outputId": "624c2aa3-ebef-4b77-e479-b825e80db530"
+        "outputId": "e79f790f-c12a-4e13-f44d-877ce7bf7d32"
       },
-      "execution_count": 133,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.1686935\n",
-            "3.7808013\n",
-            "3.3231916\n",
-            "2.8336504\n",
-            "2.9316406\n",
-            "3.0820203\n",
-            "3.1375394\n",
-            "3.0368783\n",
-            "2.7838693\n",
-            "2.6570654\n"
+            "4.2019577\n",
+            "3.5660272\n",
+            "3.1649282\n",
+            "2.6630518\n",
+            "2.8956134\n",
+            "3.278909\n",
+            "2.945941\n",
+            "2.4105926\n",
+            "2.4695182\n",
+            "2.5068831\n"
           ]
         }
       ]
