[vmap] works with block structure and is training.

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -2717,7 +2717,7 @@
       "metadata": {
         "id": "M5XnQBReV27M"
       },
-      "execution_count": 108,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -2763,7 +2763,7 @@
       "metadata": {
         "id": "gDjiKK7qQh7E"
       },
-      "execution_count": 109,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -2796,7 +2796,7 @@
       "metadata": {
         "id": "k8SK5oL4Qh7P"
       },
-      "execution_count": 110,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -2823,13 +2823,16 @@
         "\n",
         "  def __call__(self, x):\n",
         "    x = x + self.self_attention_heads(self.ln1(x))\n",
+        "    print(\"[ntn99] input size after attention_head: \", x.shape)\n",
+        "\n",
         "    x = x + self.computation_layer(self.ln2(x))\n",
+        "    print(\"[ntn99] input size after computation (end of block): \", x.shape)\n",
         "    return x"
       ],
       "metadata": {
         "id": "-uqusnxtXfEE"
       },
-      "execution_count": 113,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -2853,7 +2856,14 @@
         "    # *** new ***\n",
         "    # Since, there are 4 heads, each head only needs to output token_info of size 8.\n",
         "    # Concantenate token_info from all 4 heards, gives us 32\n",
-        "    self.self_attention_heads = MultiHeadAttention(num_heads=4, final_token_info_size=self.n_embed, T=self.T)\n",
+        "    # self.self_attention_heads = MultiHeadAttention(num_heads=4, final_token_info_size=self.n_embed, T=self.T)\n",
+        "    self.blocks = nn.Sequential([\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        nn.LayerNorm(), # TODO: I think my reduction_axis should be 0.\n",
+        "    ])\n",
         "\n",
         "    self.lang_model_head = nn.Dense(features=self.C)\n",
         "\n",
@@ -2873,7 +2883,8 @@
         "    x = token_embs + pos_embs\n",
         "\n",
         "    # feed x into self-attention head.\n",
-        "    x = self.self_attention_heads(x)\n",
+        "    # x = self.self_attention_heads(x)\n",
+        "    x = self.blocks(x)\n",
         "\n",
         "    # generate logits for each token. output: (T, channels for info -- C)\n",
         "    token_logits = self.lang_model_head(x)\n",
@@ -2883,7 +2894,7 @@
       "metadata": {
         "id": "PmX47dBOQh7P"
       },
-      "execution_count": 111,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -2914,7 +2925,7 @@
         "opt = optax.adam(learning_rate=0.001)\n",
         "state = train_state.TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt)\n",
         "\n",
-        "for epoch in range(100):\n",
+        "for epoch in range(1000):\n",
         "  batch = get_batch()\n",
         "  loss, grads = grad_fn(state.params, state, batch)\n",
         "  print(loss) if epoch%100==0 else None\n",
@@ -2924,10 +2935,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba5f0885-1665-4064-9aac-7e126ca630cf",
+        "outputId": "d6d17e5d-6641-421c-dd6b-7152547ba523",
         "id": "5Bt4gmGPQh7P"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2938,12 +2949,65 @@
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] channel_info_size:  32\n",
             "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
-            "4.1748314\n"
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] channel_info_size:  32\n",
+            "[ntn99] out_from_all_heads concatenated shape:  (8, 32)\n",
+            "[ntn99] input size after attention_head:  (8, 32)\n",
+            "[ntn99] input size after computation (end of block):  (8, 32)\n",
+            "4.6113214\n",
+            "3.1610365\n",
+            "3.1268237\n",
+            "3.3073378\n",
+            "2.637525\n",
+            "3.8197784\n",
+            "3.3699846\n",
+            "2.891018\n"
           ]
         }
       ]
