combined all code in one place -- next step add dropout

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -3020,11 +3020,11 @@
         "next_token_logit.shape"
       ],
       "metadata": {
-        "id": "gaN73uy31JYD",
-        "outputId": "af9e2d93-fea9-44ee-bbd6-fd7fff1a00aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gaN73uy31JYD",
+        "outputId": "af9e2d93-fea9-44ee-bbd6-fd7fff1a00aa"
       },
       "execution_count": 97,
       "outputs": [
@@ -3046,11 +3046,11 @@
         "next_token_logit[:, -1, :].shape"
       ],
       "metadata": {
-        "id": "QI8NJPTV1PHX",
-        "outputId": "05ee0a84-7922-4a3d-852a-4ce9e0af2510",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QI8NJPTV1PHX",
+        "outputId": "05ee0a84-7922-4a3d-852a-4ce9e0af2510"
       },
       "execution_count": 99,
       "outputs": [
@@ -3072,11 +3072,11 @@
         "jax.random.categorical(split_key, next_token_logit[:, -1, :], axis=-1, shape=(1, 1))"
       ],
       "metadata": {
-        "id": "Ab_TTRyh1dFT",
-        "outputId": "f5c55f24-f32e-4fe8-e6aa-180b4bb682f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ab_TTRyh1dFT",
+        "outputId": "f5c55f24-f32e-4fe8-e6aa-180b4bb682f0"
       },
       "execution_count": 100,
       "outputs": [
@@ -3132,12 +3132,12 @@
         "decode(context.tolist()[0], itos)"
       ],
       "metadata": {
-        "id": "XoxECiyV3j9I",
-        "outputId": "8add9577-7f16-48b6-840a-99e77af86bb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "XoxECiyV3j9I",
+        "outputId": "8add9577-7f16-48b6-840a-99e77af86bb5"
       },
       "execution_count": 119,
       "outputs": [
@@ -3155,6 +3155,269 @@
           "execution_count": 119
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Combining all code in one cell"
+      ],
+      "metadata": {
+        "id": "Pslr-91u__zm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FeedForward(nn.Module):\n",
+        "  output_size: int\n",
+        "\n",
+        "  def setup(self):\n",
+        "    # **new**: attention paper uses 4 times token_info_size when doing linear transformation.\n",
+        "    # and then projects it back to token_info_size in linear transformation layer.\n",
+        "    self.ffwd = nn.Dense(features=4 * self.output_size)\n",
+        "\n",
+        "    # **new**: projection layer, which goes back into residual pathway.\n",
+        "    self.projection = nn.Dense(self.output_size)\n",
+        "\n",
+        "  def __call__(self, x):\n",
+        "    x = nn.relu(self.ffwd(x))\n",
+        "    x = self.projection(x)\n",
+        "    return x\n",
+        "\n",
+        "\n",
+        "class Head(nn.Module):\n",
+        "  token_info_size: int # head_size; how much (emb dim) info each token emits for keys, queries, values.\n",
+        "  T: int # block size; number of tokens in a block\n",
+        "\n",
+        "  def setup(self):\n",
+        "    # key, query will take vector of size C.\n",
+        "    # i.e., channels containing info of token and will output token_info_size\n",
+        "    self.key_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
+        "    self.query_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
+        "    self.value_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
+        "\n",
+        "\n",
+        "  def __call__(self, block_of_tokens_with_info_channels: jnp.array):\n",
+        "    \"\"\"Accepts a block of tokens with info channels, like (8, 65).\"\"\"\n",
+        "\n",
+        "    # TODO(ntnsonti): Double check; but tril should not be learnable according cGPT.\n",
+        "    tril = jnp.tril(jnp.ones(shape=(self.T, self.T)))\n",
+        "\n",
+        "    # input: (T, info channels )\n",
+        "    # output: (T, token_info_size)\n",
+        "    keys = self.key_layer(block_of_tokens_with_info_channels)\n",
+        "    queries = self.query_layer(block_of_tokens_with_info_channels)\n",
+        "    values = self.value_layer(block_of_tokens_with_info_channels)\n",
+        "\n",
+        "    # chanel info size\n",
+        "    C = int(block_of_tokens_with_info_channels.shape[-1])\n",
+        "    # print(\"[ntn99] channel_info_size: \", C)\n",
+        "\n",
+        "    # compute attention score.\n",
+        "    wei = jnp.dot(queries, keys.T) * C**0.5 # (T, token_info_size) * (token_info_size, T) == (T, T)\n",
+        "    wei = jnp.where(tril==0, -jnp.inf, wei)\n",
+        "    wei = nn.softmax(wei, axis=-1)\n",
+        "\n",
+        "    out = jnp.dot(wei, values) # (T, T) * (T, token_info_size))\n",
+        "    return out # (T, token_info_size)\n",
+        "\n",
+        "\n",
+        "class MultiHeadAttention(nn.Module):\n",
+        "  num_heads: int\n",
+        "  final_token_info_size: int # After concatenating from all heads, how much info (values -- emb size) you have on each token.\n",
+        "  T: int\n",
+        "\n",
+        "  def setup(self):\n",
+        "    self.token_info_size_per_head = int(self.final_token_info_size/self.num_heads)\n",
+        "    self.heads = [\n",
+        "        Head(token_info_size=self.token_info_size_per_head, T=self.T) for _ in range(self.num_heads)\n",
+        "    ]\n",
+        "\n",
+        "    self.projection = nn.Dense(features=self.final_token_info_size)\n",
+        "\n",
+        "  def __call__(self, block_of_tokens_with_info_channels: jnp.array):\n",
+        "    out_from_each_head = jnp.array([h(block_of_tokens_with_info_channels) for h in self.heads])\n",
+        "\n",
+        "    # You just run multiple attention heads in parallel and concatenate\n",
+        "    # their output along channel dimension, i.e., dim==-1\n",
+        "    out_from_all_heads = jnp.concatenate(out_from_each_head, axis=-1)\n",
+        "    # print(\"[ntn99] out_from_all_heads concatenated shape: \", out_from_all_heads.shape)\n",
+        "\n",
+        "    return self.projection(out_from_all_heads)\n",
+        "\n",
+        "\n",
+        "class Block(nn.Module):\n",
+        "  num_heads: int\n",
+        "  final_token_info_size: int\n",
+        "  T: int\n",
+        "\n",
+        "  def setup(self):\n",
+        "    # communication.\n",
+        "    self.self_attention_heads = MultiHeadAttention(num_heads=self.num_heads,\n",
+        "                                                   final_token_info_size=self.final_token_info_size,\n",
+        "                                                   T=self.T)\n",
+        "\n",
+        "    # computation.\n",
+        "    self.computation_layer = FeedForward(output_size=self.final_token_info_size)\n",
+        "\n",
+        "    self.ln1 = nn.LayerNorm()\n",
+        "    self.ln2 = nn.LayerNorm()\n",
+        "\n",
+        "  def __call__(self, x):\n",
+        "    x = x + self.self_attention_heads(self.ln1(x))\n",
+        "    # print(\"[ntn99] input size after attention_head: \", x.shape)\n",
+        "\n",
+        "    x = x + self.computation_layer(self.ln2(x))\n",
+        "    # print(\"[ntn99] input size after computation (end of block): \", x.shape)\n",
+        "    return x\n",
+        "\n",
+        "\n",
+        "class LanguageModel(nn.Module):\n",
+        "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
+        "  vocab_size: int # number of vocabulary (number of rows of embedding table)\n",
+        "  n_embed: int # embedding dim after lookup\n",
+        "  T: int # block size, i.e., number of tokens attention block is looking at once\n",
+        "\n",
+        "  def setup(self):\n",
+        "    # number of channels you want to use for store info for each token.\n",
+        "    self.C = self.vocab_size\n",
+        "\n",
+        "    self.token_embedding_table = nn.Embed(num_embeddings=self.vocab_size, features=self.n_embed)\n",
+        "\n",
+        "    self.pos_embedding_table = nn.Embed(num_embeddings=self.T, features=self.n_embed)\n",
+        "\n",
+        "    # *** new ***\n",
+        "    # Since, there are 4 heads, each head only needs to output token_info of size 8.\n",
+        "    # Concantenate token_info from all 4 heards, gives us 32\n",
+        "    # self.self_attention_heads = MultiHeadAttention(num_heads=4, final_token_info_size=self.n_embed, T=self.T)\n",
+        "    self.blocks = nn.Sequential([\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        Block(num_heads=4, final_token_info_size=self.n_embed, T=self.T),\n",
+        "        nn.LayerNorm(), # TODO: I think my reduction_axis should be 0.\n",
+        "    ])\n",
+        "\n",
+        "    self.lang_model_head = nn.Dense(features=self.C)\n",
+        "\n",
+        "  def __call__(self, block_of_tokens: jnp.array):\n",
+        "    \"\"\"Accepts a block of tokens, like [0, 1, 2, 3, 4, 5, 6, 7].\"\"\"\n",
+        "\n",
+        "    # generate em for each token. output: (T, n_embed)\n",
+        "    token_embs = self.token_embedding_table(block_of_tokens)\n",
+        "\n",
+        "    # generate position embs for each token.\n",
+        "    ## get token positions.\n",
+        "\n",
+        "    # TODO(ntnsonti): setting num_pos to T always\n",
+        "    # num_pos = block_of_tokens.shape[0]\n",
+        "    num_pos = T\n",
+        "    positions = jnp.arange(0, num_pos)\n",
+        "    pos_embs = self.pos_embedding_table(positions)\n",
+        "\n",
+        "    # generate actual input to attention, x, which is sum of token_embs + pos_embs\n",
+        "    x = token_embs + pos_embs\n",
+        "\n",
+        "    # feed x into self-attention head.\n",
+        "    # x = self.self_attention_heads(x)\n",
+        "    x = self.blocks(x)\n",
+        "\n",
+        "    # generate logits for each token. output: (T, channels for info -- C)\n",
+        "    token_logits = self.lang_model_head(x)\n",
+        "\n",
+        "    return token_logits\n"
+      ],
+      "metadata": {
+        "id": "CYNdkmYcADtK"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## training loop"
+      ],
+      "metadata": {
+        "id": "Puz1V0xEAaYA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = LanguageModel(vocab_size=65, n_embed=32, T=BLOCK_SIZE)\n",
+        "\n",
+        "# Now, our language model needs to accept a block of tokens, not one-char at a time.\n",
+        "# We'll then make it accept a batch of blocks of tokens using vmap.\n",
+        "sample_block_of_tokens = jnp.ones(shape=(T), dtype=jnp.int32)\n",
+        "output, params = model.init_with_output(jrand.PRNGKey(99), sample_block_of_tokens)\n",
+        "params = params[\"params\"]\n",
+        "\n",
+        "# model_apply_batch = jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0))\n",
+        "\n",
+        "# *** new ***: Fuck, jax.jit makes it so much faster even on GPU.\n",
+        "model_apply_batch = jax.jit(jax.vmap(model.apply, in_axes=(None, 0), out_axes=(0)))\n",
+        "\n",
+        "def forward_pass(params, state, batch):\n",
+        "  inputs, targets = batch\n",
+        "  logits = state.apply_fn({\"params\": params}, inputs)\n",
+        "  loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
+        "  loss = loss.mean()\n",
+        "  return loss\n",
+        "\n",
+        "grad_fn = jax.value_and_grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument.\n",
+        "\n",
+        "opt = optax.adam(learning_rate=0.0001)\n",
+        "state = train_state.TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt)\n",
+        "\n",
+        "for epoch in range(5000):\n",
+        "  batch = get_batch()\n",
+        "  loss, grads = grad_fn(state.params, state, batch)\n",
+        "  print(\"loss\", loss, \"epoch\", epoch) if epoch%100==0 else None\n",
+        "  state = state.apply_gradients(grads=grads)"
+      ],
+      "metadata": {
+        "id": "Y9MIDaZLAWKE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## generating"
+      ],
+      "metadata": {
+        "id": "5z6RHHqQAc8-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = BLOCK_SIZE\n",
+        "\n",
+        "state_apply_jit = jax.jit(state.apply_fn)\n",
+        "\n",
+        "context = jnp.tile(jnp.array([52], dtype=jnp.int32), T)\n",
+        "context = context[None, -T:]\n",
+        "key = jrand.PRNGKey(99)\n",
+        "\n",
+        "for _ in range(100):\n",
+        "  next_token_logits = state_apply_jit({\"params\": state.params}, context[:, -T:])\n",
+        "\n",
+        "  key, split_key = jrand.split(key)\n",
+        "  new_token = jax.random.categorical(key, next_token_logits[:, -1, :], axis=-1, shape=(1, 1))\n",
+        "\n",
+        "  context = jnp.concatenate([context, new_token], axis=1)\n",
+        "\n",
+        "\n",
+        "decode(context.tolist()[0], itos)\n"
+      ],
+      "metadata": {
+        "id": "8mow1yC3AcS2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
