need to add dropout

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -3159,7 +3159,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Combining all code in one cell"
+        "# Combining all code in one cell\n",
+        "*********"
       ],
       "metadata": {
         "id": "Pslr-91u__zm"
@@ -3196,8 +3197,10 @@
         "    self.query_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
         "    self.value_layer = nn.Dense(self.token_info_size, use_bias=False)\n",
         "\n",
+        "    # self.dropout = nn.Dropout(rate=0.2)\n",
         "\n",
-        "  def __call__(self, block_of_tokens_with_info_channels: jnp.array):\n",
+        "\n",
+        "  def __call__(self, block_of_tokens_with_info_channels: jnp.array, training: bool = True):\n",
         "    \"\"\"Accepts a block of tokens with info channels, like (8, 65).\"\"\"\n",
         "\n",
         "    # TODO(ntnsonti): Double check; but tril should not be learnable according cGPT.\n",
@@ -3218,8 +3221,10 @@
         "    wei = jnp.where(tril==0, -jnp.inf, wei)\n",
         "    wei = nn.softmax(wei, axis=-1)\n",
         "\n",
-        "    out = jnp.dot(wei, values) # (T, T) * (T, token_info_size))\n",
-        "    return out # (T, token_info_size)\n",
+        "    attention_values = jnp.dot(wei, values) # (T, T) * (T, token_info_size))\n",
+        "\n",
+        "    # out = self.dropout(attention_values, deterministic=not training)\n",
+        "    return attention_values # (T, token_info_size)\n",
         "\n",
         "\n",
         "class MultiHeadAttention(nn.Module):\n",
@@ -3330,7 +3335,7 @@
       "metadata": {
         "id": "CYNdkmYcADtK"
       },
-      "execution_count": 133,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -3370,17 +3375,29 @@
         "opt = optax.adam(learning_rate=0.0001)\n",
         "state = train_state.TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt)\n",
         "\n",
-        "for epoch in range(5000):\n",
+        "for epoch in range(1):\n",
         "  batch = get_batch()\n",
         "  loss, grads = grad_fn(state.params, state, batch)\n",
         "  print(\"loss\", loss, \"epoch\", epoch) if epoch%100==0 else None\n",
         "  state = state.apply_gradients(grads=grads)"
       ],
       "metadata": {
-        "id": "Y9MIDaZLAWKE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y9MIDaZLAWKE",
+        "outputId": "26573fe0-f36b-4cbe-e80a-20ba127f74b1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loss 4.821562 epoch 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
