added pmap code -- need to complete

--- a/nanoGPT_singe_file.ipynb
+++ b/nanoGPT_singe_file.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMocFN2PyqQ2pfxcR+g2KAr",
+      "authorship_tag": "ABX9TyOywCz+25rMYyJ4DJINQbdg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,26 +73,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jBNxJaDJLWKG",
-        "outputId": "3ec11538-e77d-47e8-ab5a-4d4419223b35"
+        "outputId": "6e0979e1-66d2-4e6a-c425-76407d560ef0"
       },
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[TpuDevice(id=0, process_index=0, coords=(0,0,0), core_on_chip=0),\n",
-              " TpuDevice(id=1, process_index=0, coords=(0,0,0), core_on_chip=1),\n",
-              " TpuDevice(id=2, process_index=0, coords=(1,0,0), core_on_chip=0),\n",
-              " TpuDevice(id=3, process_index=0, coords=(1,0,0), core_on_chip=1),\n",
-              " TpuDevice(id=4, process_index=0, coords=(0,1,0), core_on_chip=0),\n",
-              " TpuDevice(id=5, process_index=0, coords=(0,1,0), core_on_chip=1),\n",
-              " TpuDevice(id=6, process_index=0, coords=(1,1,0), core_on_chip=0),\n",
-              " TpuDevice(id=7, process_index=0, coords=(1,1,0), core_on_chip=1)]"
+              "[CpuDevice(id=0)]"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 14
         }
       ]
     },
@@ -117,7 +110,7 @@
       "metadata": {
         "id": "72Nj51EWBerM"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -419,7 +412,8 @@
         "  return model.apply({\"params\": params}, inputs, False, rngs={'dropout': dropout_key})\n",
         "\n",
         "model_apply_batch = jax.jit(jax.vmap(model_apply, in_axes=(None, 0), out_axes=(0)))\n",
-        "# model_apply_batch = jax.vmap(model_apply, in_axes=(None, 0), out_axes=(0))\n",
+        "model_apply_pmapped = jax.pmap(model_apply, axis_name='device')  # Parallelize across 'device' axis\n",
+        "\n",
         "\n",
         "def forward_pass(params, state, batch, dropout_key):\n",
         "  inputs, targets = batch\n",
@@ -431,7 +425,8 @@
         "grad_fn = jax.value_and_grad(forward_pass, argnums=(0))  # differentiate wrt 0th pos argument.\n",
         "\n",
         "opt = optax.adam(learning_rate=0.0001)\n",
-        "state = TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt, key=random_key)\n",
+        "single_device_train_state = TrainState.create(apply_fn=model_apply_batch, params=params, tx=opt, key=random_key)\n",
+        "all_device_train_states = jax.device_put_replicated(single_device_train_state, jax\n",
         "\n",
         "for epoch in range(1):\n",
         "  batch = get_batch()\n",
@@ -458,6 +453,32 @@
           "text": [
             "loss 4.7602735 epoch 0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jax.devices()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qk04jgZDRtPq",
+        "outputId": "f7a0c09a-7409-42f7-e29b-edc2ca570c62"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[CpuDevice(id=0)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
